--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     <title>Epicare</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro"
+      rel='stylesheet' type='text/css'>
   </head>
   <body>
     <noscript>
